Fixed card spacing

--- a/app/assets/stylesheets/layouts/_main-layouts.scss
+++ b/app/assets/stylesheets/layouts/_main-layouts.scss
@@ -1,4 +1,5 @@
 .content-vertical-space{
 background-color: #1b3660;
-height: 100vh;
+min-height: 100vh;
+padding-bottom: 40px;
 }
